kubernetes/n8n/service-nodeport.yaml
apiVersion: v1
kind: Service

metadata:
  name: n8n-nodeport
  namespace: n8n

spec:
  type: NodePort

  selector:
    app: n8n

  ports:
    - name: http
      port: 5678
      targetPort: 5678
      nodePort: 31678
