kubernetes/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: n8n-ingress
  namespace: n8n

spec:
  ingressClassName: kong

  rules:
    - http:
        paths:
          - path: /n8n
            pathType: Prefix
            backend:
              service:
                name: n8n-service
                port:
                  number: 5678
